<resources>
    <string name="app_name">SoccorApp</string>
    <string name="title_login">Login</string>
    <string name="title_member">Member</string>
    <string name="title_stream">Amplify</string>
    <string name="title_sport">Sport</string>
    <string name="title_settings">Settings</string>
    <string name="domain_url">Domain URL</string>
    <string name="update">update</string>
</resources>