<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_all"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearly"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Signup"
            />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Confirm Signup"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Sign In"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_domainurl"
        app:layout_constraintTop_toBottomOf="@id/linearly"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/domain_url"
        />

    <EditText
        android:id="@+id/edt_domainurl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/title_login"
        android:inputType="textUri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_domainurl"
         />

    <Button
        android:id="@+id/btn_updateurl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/edt_domainurl"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_accesstoken"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_updateurl"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/domain_url"
        />


    <TextView
        android:id="@+id/txt_gameId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_accesstoken"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/domain_url"
        />

</androidx.constraintlayout.widget.ConstraintLayout>